# mugen

./: LICENSE  README.md  build.gradle  cript  install.py  proguard-rules.pro  requirements.txt
mugen/: Cargo.toml
mugen/src/: debug.rs  emulator.rs  general.rs  hook.rs  lib.rs  ml.rs  ml_output.rs  network.rs  repacking.rs  root.rs  utilit.rs
src/androidTest/java/com/example/mugen/: ExampleInstrumentedTest.kt
src/main/: AndroidManifest.xml
src/main/java/com/example/mugen/: Burp.kt  Debug.kt  Emulator.kt  Honey.kt  Hook.kt  Mugen.kt  Neural.kt  Root.kt  ssl.kt
